add model image & synchronizing missing models